panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_function__test_declare_function_in_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_function/test_declare_function_in_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_function/test_declare_function_in_function.c"
   (function-definition external
      f~0 `fn() -> int`
      (compound-statement
         (declaration external g~2 `fn() -> int` ∅)
         (declaration external g~2 `fn() -> int` ∅)
         (return (42 `int`)))))

----- stderr -----
