panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_function__test_error_redefinition_of_local_with_different_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: duplicate definition for `x`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:3:15]
   │
 2 │     int x = 42;
   │         ┬  
   │         ╰── previously defined here
 3 │     int const x = 27;
   │               ┬  
   │               ╰── duplicate definition
───╯

Error: redeclaration of `x` with different type: `int` vs. `int const`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:3:15]
   │
 2 │     int x = 42;
   │         ┬  
   │         ╰── previously declared here with type `int`
 3 │     int const x = 27;
   │               ┬  
   │               ╰── new declaration with different type `int const`
───╯

Error: duplicate definition for `a`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:5:10]
   │
 4 │     int a = 0;
   │         ┬  
   │         ╰── previously defined here
 5 │     char a = 1;
   │          ┬  
   │          ╰── duplicate definition
───╯

Error: redeclaration of `a` with different type: `int` vs. `char`
   ╭─[panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_different_type.c:5:10]
   │
 4 │     int a = 0;
   │         ┬  
   │         ╰── previously declared here with type `int`
 5 │     char a = 1;
   │          ┬  
   │          ╰── new declaration with different type `char`
───╯
